--- a/author.html
+++ b/author.html
@@ -12,7 +12,7 @@
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
 
-	<!-- Bootstrap -->
+	<!-- Bootstrap --><!--just playing around with my clone lol-->
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
 	<!-- Font Awesome Icon -->
