--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 	<title>Callie HTML Template</title>
 
-	<!-- Google font -->
+	<!-- Google font --><!--Just playing bro-->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
 
 	<!-- Bootstrap -->
